Fixed mcisStatus bar that was getting cut off at the end

--- a/public/stylesheets/mcis-status.css
+++ b/public/stylesheets/mcis-status.css
@@ -99,7 +99,7 @@ body {
 
 .history-log {
   height: 100%;
-  min-width: 102%;
+  min-width: 101.5%;
   white-space: nowrap;
 }
 
